feat: gateway and frontend now fully integrated via VITE_API_BASE

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,13 @@ services:
       - auth-service
       - evaluation-service
     env_file: .env
+  
+  gateway:
+    build: ./gateway
+    container_name: gateway
+    ports:
+      - "8080:8080" 
+    depends_on:
+      - auth-service
+      - evaluation-service
+    restart: unless-stopped
