--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
-version: "3.9"
-
 services:
   postgres:
     image: postgres:15
     restart: always
     container_name: postgres
-    env_file: .env
+    env_file: .env.db
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
+      - pgdata:/var/lib/postgresql/data
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   auth-service:
@@ -48,3 +51,7 @@ services:
       - auth-service
       - evaluation-service
     restart: unless-stopped
+
+
+volumes:
+  pgdata:
