Phase 2.1–2.2: connect Postgres & evaluation-service; add gateway routing + CORS; full health check OK

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -42,23 +42,36 @@ http {
     }
 
     # /api/eval/* -> evaluation-service
-    location /api/eval/ {
-      # CORS for dev
-      add_header Access-Control-Allow-Origin *;
-      add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS";
-      add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With";
+    location = /api/eval/health {
+      add_header Access-Control-Allow-Origin * always;
+      add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+      add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
 
-      # Preflight
-      if ($request_method = OPTIONS) {
-        return 204;
-      }
-      
-      # drop "/api/eval/" before proxying
-      rewrite ^/api/eval/?(.*)$ /$1 break;
-      proxy_pass http://eval_upstream;
+      if ($request_method = OPTIONS) { return 204; }
+
+      proxy_pass http://evaluation-service:3002/health/db;
+      proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    location /api/eval/ {
+      add_header Access-Control-Allow-Origin * always;
+      add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+      add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
+
+      if ($request_method = OPTIONS) { return 204; }
+
+      rewrite ^/api/eval/(.*)$ /$1 break;
+
+      proxy_pass http://evaluation-service:3002/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
   }
 }
