--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,6 @@ services:
     env_file: .env.db
     ports:
       - "${DB_PORT}:5432"
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -30,7 +26,7 @@ services:
       - "3002:3002"
     depends_on:
       - postgres
-    env_file: .env
+    env_file: ./evaluation-service/.env
 
   frontend:
     build: ./frontend
