--- a/evaluation-service/package.json
+++ b/evaluation-service/package.json
@@ -2,6 +2,12 @@
   "name": "evaluation-service",
   "private": true,
   "type": "module",
-  "scripts": { "start": "node src/index.js" },
-  "dependencies": { "express": "^4.19.2" }
+  "scripts": {
+    "start": "node src/index.js"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "pg": "^8.16.3"
+  }
 }
