--- a/evaluation-service/package.json
+++ b/evaluation-service/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3"
   }
 }
