--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -34,8 +34,8 @@ http {
       }
 
       # drop "/api/auth/" before proxying
-      rewrite ^/api/auth/?(.*)$ /$1 break;
       proxy_pass http://auth_upstream;
+      proxy_set_header Authorization $http_authorization;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -64,9 +64,8 @@ http {
 
       if ($request_method = OPTIONS) { return 204; }
 
-      rewrite ^/api/eval/(.*)$ /$1 break;
-
-      proxy_pass http://evaluation-service:3002/;
+      proxy_pass http://evaluation-service:3002;
+      proxy_set_header Authorization $http_authorization;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
