--- a/data-integration-service/package.json
+++ b/data-integration-service/package.json
@@ -10,6 +10,7 @@
     "express": "^4.19.2",
     "cors": "^2.8.5",
     "node-fetch": "^3.3.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
