--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
       - SD_BASE_URL=http://mock-schoolday-service:7001
       - SD_CLIENT_ID=dev-client
       - SD_CLIENT_SECRET=dev-secret
+      - AUTH_JWT_SECRET=${AUTH_JWT_SECRET}
     depends_on:
       - postgres
       - mock-schoolday-service
