--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -41,6 +41,19 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    # Admin-only: trigger roster sync via gateway
+    location = /api/integration/sync {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # VERY IMPORTANT: forward Authorization header (JWT)
+        proxy_set_header Authorization $http_authorization;
+
+        proxy_pass http://data-integration-service:7002/secure/sync/run;
+    }
+
+
     # /api/eval/* -> evaluation-service
     location = /api/eval/health {
       add_header Access-Control-Allow-Origin * always;
