--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -53,6 +53,14 @@ http {
         proxy_pass http://data-integration-service:7002/secure/sync/run;
     }
 
+    # GET /api/integration/sync/status → data-integration (no special auth, but keep header)
+    location = /api/integration/sync/status {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass http://data-integration-service:7002/internal/sync/status;
+    }
 
     # /api/eval/* -> evaluation-service
     location = /api/eval/health {
