--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     depends_on:
       - postgres
     env_file: .env
+    environment:
+      - AUTH_JWT_SECRET=${AUTH_JWT_SECRET}
 
   evaluation-service:
     build: ./evaluation-service
@@ -28,7 +30,7 @@ services:
       - postgres
     env_file: ./evaluation-service/.env
     environment:
-    - AUTH_JWT_SECRET=${AUTH_JWT_SECRET}
+      - AUTH_JWT_SECRET=${AUTH_JWT_SECRET}
 
   frontend:
     build: ./frontend
