--- a/evaluation-service/package.json
+++ b/evaluation-service/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "pdfkit": "^0.15.0"
   }
 }
