chore: working teacher overview + table button wired via /demo

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -93,5 +93,10 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
+    
+    location /demo/ {
+      proxy_pass http://evaluation-service:3002/demo/;  # 注意末尾的斜杠！
+      proxy_set_header Host $host;
+    }
   }
 }
