--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -62,6 +62,15 @@ http {
         proxy_pass http://data-integration-service:7002/internal/sync/status;
     }
 
+    # POST /api/integration/webhooks/subscribe → data-integration (admin-only)
+    location = /api/integration/webhooks/subscribe {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass http://data-integration-service:7002/webhooks/subscribe;
+    }
+
     # /api/eval/* -> evaluation-service
     location = /api/eval/health {
       add_header Access-Control-Allow-Origin * always;
