--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,17 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "scripts": { "dev": "vite" },
+  "scripts": { 
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-  "devDependencies": { "vite": "^5.4.0" }
+  "devDependencies": { 
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.1"
+  }
 }
