feat: Add complete database schema for Service/Professional/Career tabs
- Add 5 new tables: service_activities, education_history, career_history, awards, grants
- Add comprehensive seed data for demo teacher (Alice Chen)
- Add helper views for active service, current positions, and active grants
- Update .gitignore to exclude local audit files
- Total: 6 service activities, 3 education records, 3 career positions, 3 awards, 3 grants

This completes Step 1 of the Multi-Tab Evaluation Interface implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ postgres-data/
 .idea/
 .vscode/
 
+# audit and planning files (local only)
+REQUIREMENTS_AUDIT.md
+
 # ── env files: never commit secrets ──────────────────────────────
 .env
 .env.*
