feat: implement document management service
- Add file upload, download, delete endpoints
- Integrate document upload UI in Professional tab
- Fix CSP inline event handler issues
- Mount uploads directory to host for persistence

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     env_file: ./evaluation-service/.env
     environment:
       - AUTH_JWT_SECRET=${AUTH_JWT_SECRET}
+    volumes:
+      - ./evaluation-service/uploads:/app/uploads
 
   frontend:
     build: ./frontend
