--- a/evaluation-service/package.json
+++ b/evaluation-service/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
-    "pdfkit": "^0.15.0"
+    "multer": "^2.0.2",
+    "pdfkit": "^0.15.0",
+    "pg": "^8.16.3"
   }
 }
